--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -44,10 +44,14 @@ jobs:
         with:
           image: test-img
           args: --file=test.dockerfile
-          # sarif: false
+          sarif: false
       
       - name: Upload result to GitHub Code Scanning
         continue-on-error: true
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: snyk.sarif
+
+      - name: Check docker image scan status
+        if: ${{ steps.snyk-scan-docker.outcome == 'failure' }}
+        run: exit 1
